google play button image change

--- a/dev/index.html
+++ b/dev/index.html
@@ -224,7 +224,7 @@
               <h4>herostory</h4>
               <p>Enjoy Game through Moile</p>
               <p>
-                <a class="btn btn-primary btn-large">Download NOW</a> 
+                <a href="#"><img src="http://www.android.com/images/brand/get_it_on_play_logo_large.png"></a> 
               </p>
             </div>
           </div>
