--- a/dev/index.html
+++ b/dev/index.html
@@ -20,6 +20,7 @@
       // Copy your init data from here: https://dashboard.stackmob.com/sdks/js/config
       // Your other app information is here: https://dashboard.stackmob.com/settings
       StackMob.init({
+        "useRelativePathForAjax": true, 
         publicKey: '2efceebc-6c66-4367-b065-c0625354d679',
         apiVersion : 0
       });
