--- a/index.html
+++ b/index.html
@@ -9,104 +9,9 @@
         li { padding-top: 10px; }
       /* ]]> */
     </style>
-		<!--
-		*************************************
-		STACKMOB JS SDK DEPENDENCIES
-		Include these in your pages where you want to use the StackMob js sdk
-		*************************************
-		-->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script type="text/javascript" src="http://static.stackmob.com/js/stackmob-js-0.9.1-bundled-min.js"></script>
-
-		<!--
-		*************************************
-		INITIALIZE THE JS SDK BELOW
-
-		Copy/Paste the init method from:
-		https://dashboard.stackmob.com/sdks/js/config
-		*************************************
-		-->
-		<script type="text/javascript">
-      /* <![CDATA[ */
-      // Initialize StackMob object
-      // Copy your init data from here: https://dashboard.stackmob.com/sdks/js/config
-      // Your other app information is here: https://dashboard.stackmob.com/settings
-      StackMob.init({
-        //publicKey: '2efceebc-6c66-4367-b065-c0625354d679',
-        apiVersion : 0
-      });
-      /* ]]> */
-		</script>
 
 	</head>
 	<body>
-    <div class="success">
-  		<h1>Test URL!</h1>
-
-  		<h2> READ POST ( 글 읽기 ) </h2>
-  		<p>
-  			It created a new schema in your server-side StackMob database named
-  			<code>
-  				testobject
-  			</code>
-  			.
-  		</p>
-  		<p>
-  			<a href="https://dashboard.stackmob.com/schemas/" target="_blank" class="button">View your new testobject schema</a>
-  		</p>
-  		<p>
-  			...and it also saved a
-  			<code>
-  				testobject
-  			</code>
-  			object - all in one call.
-  		</p>
-  		<p>
-  			<a href="https://dashboard.stackmob.com/data/browser/testobject" target="_blank" class="button">View the Data</a>
-  		</p>
-  		<p>
-  			View the source, then learn more!
-  			<ul>
-  				<li>
-  					<a href="http://developer.stackmob.com/tutorials/js" target="_blank">JS SDK Tutorials</a>
-  				</li>
-  				<li>
-  					<a href="https://developer.stackmob.com/sdks/js/api" target="_blank">JS SDK API Docs</a>
-  				</li>
-  			</ul>
-      </p>
-      <p>
-  			* All models and collections inherit from <a href="http://backbonejs.org/" target="_blank">Backbone.js</a> and hence share the same methods.  Feel free to optionally <a href="http://backbonejs.org/" target="_blank">learn more about Backbone</a>!
-  		</p>
-      <p>
-        <a href="http://127.0.0.1:4567/more-examples/index.html"><h3>Continue to more examples</h3></a>
-      </p>
-
-    </div>
-
-    <div class="error">
-      <h1>Waiting...</h1>
-      <p>
-        If this message doesn't go away, something might be wrong.<br/><br/>
-        <h3>Troubleshooting tips:</h3>
-        <ul>
-          <li>
-            Don't forget to <a href="https://dashboard.stackmob.com/sdks/js/config" target="_blank">initialize the JS SDK</a> in this file (index.html)
-          </li>
-          <li>
-            You must view this file through a web server (ex: localhost:4567) not directly (ex: file://.../index.html).
-            <ul>
-              <li>
-                If you're running this through your own server, be sure to add your url (ex: http://localhost:1234) to your <a href="https://dashboard.stackmob.com/module/cors/settings">CORS whitelist</a>.
-              </li>
-              <li>
-                The StackMob Web Server is included in this package if you don't already have one. Just run
-                stackmobserver.py (located in this same directory). <a href="http://www.python.org/getit/" target="_blank">Requires Python 2.7+</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </p>
-    </div>
+  COOLTIME!!!!
 	</body>
 </html>
